# conduit-find

./: .gitignore  .travis.yml  Helper.c  README.md  cabal.project  conduit-find.cabal  default.nix  find-conduit.cabal  shell.nix  stack.yaml
.github/workflows/: haskell-ci.yml  test.yml
Data/: Cond.hs
Data/Conduit/: Find.hs  Looped.hs
Data/Conduit/Find/: Directory.hs  EParIO.hs  Looped.hs  Types.hs
nix/: default.nix  sources.json  sources.nix
nix/haskell/: overlay.nix
src/Data/: Cond.hs
src/Data/Conduit/: Find.hs
test/: doctest.hs  find-hs.hs  main.hs
