Name:                conduit-find
Version:             0.1.0.3
Synopsis:            A file-finding conduit that allows user control over traversals.
License-file:        LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          Erik de Castro Lopo <erikd@mega-nerd.com>
Build-Type:          Simple
Cabal-Version:       >= 1.10
Category:            System
Stability:           Stable

Homepage:            https://github.com/erikd/conduit-find
Bug-Reports:         https://github.com/erikd/conduit-find/issues

Description:
  A file-finding conduit that allows user control over traversals.  Please see
  the module 'Data.Conduit.Find' for more information.

Source-repository head
  type: git
  location: https://github.com/erikd/conduit-find.git

Flag leafopt
  Description: Enable leaf optimization
  Default: True

Library
    default-language:   Haskell2010
    ghc-options: -Wall -O2 -funbox-strict-fields
    hs-source-dirs: src
    if os(linux) && flag(leafopt)
        cpp-options: -DLEAFOPT=1
    build-depends:
        base                 >= 3 && < 5
      , conduit              >= 1.2
      , conduit-extra
      , conduit-combinators
      , attoparsec
      , unix-compat          >= 0.4.1.1
      , text                 >= 2.0 && < 2.2
      , regex-posix
      , mtl
      , semigroups
      , exceptions           >= 0.6
      , time
      , resourcet            >= 1.1 && < 1.4
      , streaming-commons
      , transformers
      , transformers-base
      , transformers-either  >= 0.1 && < 0.2
      , mmorph
      , either
      , monad-control        >= 1.0
      , filepath
      , unliftio-core
    exposed-modules:
        Data.Cond, Data.Conduit.Find

test-suite test
    hs-source-dirs: test
    default-language: Haskell2010
    main-is: main.hs
    type: exitcode-stdio-1.0
    ghc-options: -Wall -threaded
    build-depends:
        base
      , conduit-find
      , conduit
      , conduit-combinators
      , attoparsec
      , unix-compat          >= 0.4.1.1
      , text                 >= 0.11.3.1
      , regex-posix
      , mtl
      , time
      , either
      , semigroups
      , streaming-commons
      , exceptions
      , transformers
      , transformers-base
      , monad-control
      , mmorph
      , filepath
      , hspec                >= 1.4
      , resourcet
      , unliftio-core

Test-suite doctests
    Default-language: Haskell2010
    Type:    exitcode-stdio-1.0
    Main-is: doctest.hs
    Hs-source-dirs: test
    Build-depends:
        base
      , directory    >= 1.0
      , doctest      >= 0.8
      , filepath     >= 1.3
      , semigroups   >= 0.4

Executable find-hs
    Main-is:     find-hs.hs
    default-language:   Haskell2010
    Ghc-options: -threaded -O2
    Hs-source-dirs: test
    Build-depends:
        base
      , conduit-find
      , conduit
      , conduit-extra
      , conduit-combinators
      , attoparsec
      , unix
      , text
      , regex-posix
      , mtl
      , time
      , either
      , semigroups
      , streaming-commons
      , exceptions
      , transformers
      , transformers-base
      , monad-control
      , mmorph
      , filepath
      , resourcet
      , unliftio-core
